<resources>
    <string name="app_name">Chirp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Please Login</string>
    <string name="password_hint">Password</string>
    <string name="login_hint">Username</string>
    <string name="login_button">Login</string>
    <string name="signup_text">Signup</string>
    <string name="title_activity_signup">Please Signup</string>
    <string name="email_text">Email</string>
    <string name="fname_text">First Name</string>
    <string name="lname_text">Last Name</string>
    <string name="password_text">Password</string>
    <string name="password_confirm_text">Retype Password</string>
    <string name="alert_title">Alert!</string>
    <string name="alert_ok">OK</string>
    <string name="confirm_title">Are you sure?</string>
    <string name="confirm_ok">Yes</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="settings_logout">Logout</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="empty_inbox_label">No new messages</string>

    <string-array name="camera_options">
        <item>Take Photo</item>
        <item>Take Video</item>
        <item>Choose Photo</item>
        <item>Choose Video</item>
    </string-array>

    <array name="images_array">
        <item>
            http://lh5.ggpht.com/_hepKlJWopDg/TB-_WXikaYI/AAAAAAAAElI/715k4NvBM4w/s144-c/IMG_0075.JPG
        </item>
        <item>
            http://lh4.ggpht.com/_4f1e_yo-zMQ/TCe5h9yN-TI/AAAAAAAAXqs/8X2fIjtKjmw/s144-c/IMG_1786.JPG
        </item>
        <item>
            http://lh3.ggpht.com/_GEnSvSHk4iE/TDSfmyCfn0I/AAAAAAAAF8Y/cqmhEoxbwys/s144-c/_MG_3675.jpg
        </item>
        <item>
            http://lh6.ggpht.com/_ZN5zQnkI67I/TCFFZaJHDnI/AAAAAAAABVk/YoUbDQHJRdo/s144-c/P9250508.JPG
        </item>
        <item>
            http://lh4.ggpht.com/_XjNwVI0kmW8/TCOwNtzGheI/AAAAAAAAC84/SxFJhG7Scgo/s144-c/0014.jpg
        </item>
        <item>
            http://lh6.ggpht.com/_Nsxc889y6hY/TBp7jfx-cgI/AAAAAAAAHAg/Rr7jX44r2Gc/s144-c/IMGP9775a.jpg
        </item>
        <item>
            http://lh3.ggpht.com/_GEnSvSHk4iE/TDSfmyCfn0I/AAAAAAAAF8Y/cqmhEoxbwys/s144-c/_MG_3675.jpg
        </item>
        <item>
            http://lh6.ggpht.com/_ZN5zQnkI67I/TCFFZaJHDnI/AAAAAAAABVk/YoUbDQHJRdo/s144-c/P9250508.JPG
        </item>
        <item>
            http://lh4.ggpht.com/_XjNwVI0kmW8/TCOwNtzGheI/AAAAAAAAC84/SxFJhG7Scgo/s144-c/0014.jpg
        </item>
        <item>
            http://lh6.ggpht.com/_Nsxc889y6hY/TBp7jfx-cgI/AAAAAAAAHAg/Rr7jX44r2Gc/s144-c/IMGP9775a.jpg
        </item>
    </array>

    <array name="headline_array">
        <item>Dance of Democracy</item>
        <item>Major Naxal attacks in the past</item>
        <item>BCCI suspends Gurunath pending inquiry</item>
        <item>Life convict can`t claim freedom after 14 yrs: SC</item>
        <item>Indian Army refuses to share info on soldiers mutilated at LoC</item>
        <item>French soldier stabbed; link to Woolwich attack being probed</item>
        <item>BCCI suspends Gurunath pending inquiry</item>
        <item>Life convict can`t claim freedom after 14 yrs: SC</item>
        <item>Indian Army refuses to share info on soldiers mutilated at LoC</item>
        <item>French soldier stabbed; link to Woolwich attack being probed</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
