<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.abhishekpareek.app.chirp.SignupActivity"
    tools:showIn="@layout/activity_signup">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_text"
        android:inputType="textWebEmailAddress"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Signup"
        android:id="@+id/signupButton"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/phoneText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fnameText"
        android:hint="@string/fname_text"
        android:layout_marginTop="83dp"
        android:layout_below="@+id/usernameText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnameText"
        android:hint="@string/lname_text"
        android:layout_below="@+id/fnameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/retypePasswordText"
        android:hint="@string/password_confirm_text"
        android:layout_below="@+id/loginPasswordText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:password="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginPasswordText"
        android:hint="@string/password_text"
        android:layout_below="@+id/usernameText"
        android:layout_centerHorizontal="true"
        android:password="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneText"
        android:layout_below="@+id/lnameText"
        android:layout_centerHorizontal="true"
        android:hint="Mobile Number"/>

</RelativeLayout>
